# ultra-precise_calculator

./: .clang-format  .gitignore  CMakeLists.txt  README.md  big_int.hpp  bitset_arithmetic.hpp  calculator.cpp  calculator.pro  expression.cpp  expression.h  identity.cpp  identity.h  lexicon.l  main.cpp  parser.yy  scanner.ll  syntax.y  value.cpp  value.h  verylong.cpp  verylong.h
.github/workflows/: cmake-multi-platform.yml
cpp/: CMakeLists.txt  lexicon.l  syntax.y
java/: calc.flex  calc.y  make.sh
